fix: added fullCommand field to history element

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,7 +14,7 @@
   margin: auto;
   display: block;
   overflow: scroll;
-  background-color: darkslateblue;
+  background-color:antiquewhite;
 }
 
 .repl-input {
