--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,14 +15,20 @@
   display: block;
   overflow: scroll;
   background-color:antiquewhite;
+  justify-content: center;
+  align-items: center;
 }
 
 .repl-history-output {
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     display: block;
-  }
+}
+
+.repl-history table {
+    margin-left: auto;
+    margin-right: auto; /* Specifically center tables */
+}
 
 .repl-input {
   margin: auto;
