feat: finished load view and search, all work with mocked data

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,6 +28,12 @@
 .repl-history table {
     margin-left: auto;
     margin-right: auto; /* Specifically center tables */
+    border-collapse: collapse;
+}
+
+/* not sure this is doing anything*/
+.repl-history td{
+  padding: 10px;
 }
 
 .repl-input {
